# ChangeLog for dev-python/pywebdav
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pywebdav/ChangeLog,v 1.19 2013/06/16 10:18:48 pacho Exp $

  16 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  python will maintain this: http://www.gossamer-
  threads.com/lists/gentoo/dev/273296#273296

  01 Jun 2013; Pacho Ramos <pacho@gentoo.org> -pywebdav-0.9.4.1.ebuild,
  metadata.xml:
  Cleanup due bug #151880

*pywebdav-0.9.8 (05 May 2012)

  05 May 2012; Cédric Krier <cedk@gentoo.org> +pywebdav-0.9.8.ebuild:
  Version bump

*pywebdav-0.9.4.1 (18 Feb 2011)

  18 Feb 2011; Cédric Krier <cedk@gentoo.org> +pywebdav-0.9.4.1.ebuild,
  -pywebdav-0.9.4.ebuild:
  Version bump

*pywebdav-0.9.4 (16 Apr 2010)

  16 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pywebdav-0.9.4.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS.

  03 Nov 2009; Cédric Krier <cedk@gentoo.org> pywebdav-0.9.3.ebuild:
  Fix license

  04 Sep 2009; Patrick Lauer <patrick@gentoo.org> -pywebdav-0.6.ebuild,
  -pywebdav-0.7.ebuild, -pywebdav-0.8.ebuild, -pywebdav-0.9.ebuild,
  -pywebdav-0.9.1.ebuild, -pywebdav-0.9.2.ebuild:
  Remove old

  27 Jul 2009; Cédric Krier <cedk@gentoo.org> pywebdav-0.6.ebuild,
  pywebdav-0.7.ebuild, pywebdav-0.8.ebuild, pywebdav-0.9.ebuild,
  pywebdav-0.9.1.ebuild, pywebdav-0.9.2.ebuild, pywebdav-0.9.3.ebuild:
  Add missing dependency on dev-python/setuptools for bug #278980

*pywebdav-0.9.3 (02 Jul 2009)

  02 Jul 2009; Cédric Krier <cedk@gentoo.org> +pywebdav-0.9.3.ebuild:
  Version bump

*pywebdav-0.9.2 (11 May 2009)

  11 May 2009; Cédric Krier <cedk@gentoo.org> +pywebdav-0.9.2.ebuild:
  Version bump

*pywebdav-0.9.1 (09 May 2009)

  09 May 2009; Cédric Krier <cedk@gentoo.org> +pywebdav-0.9.1.ebuild:
  Version bump

*pywebdav-0.9 (08 Apr 2009)

  08 Apr 2009; Cédric Krier <cedk@gentoo.org> +pywebdav-0.9.ebuild:
  Version bump
