@@ -1,5 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST PyChart-1.39.tar.gz 115908 SHA256 882650928776a7ca72e67054a9e0ac98f78645f279c0cfb5910db28f03f07c2e SHA512 b6af817906610f3907508b72e2e95a68893f65f132c7964c803dcb88ca2e999b57f89ead1c6a66e28796f1ed2df512d16513d093fc8de1505f678edda3e41532 WHIRLPOOL c69006c7ee888acfaf8aacd950daa9559af2d0bee0c3c55c7250d2a0376c6d5b633134b86c5ac150e4e535e4a35af19d0b0964a00a6ede2d41fa0f66fb19ceb7
 DIST pychart-doc.tar.gz 302416 SHA256 0188f1c3c0eb6e35b8518d4360f0356e516e81305a040caf2f2c4744b7850d6f SHA512 9a81fea73b37fb8decc1279cc0e52abbdc9f98c7d73c98c9c7d7d2d27e0bf33fa4eb199dc4a09488d5f109a202b23fe950d58e1140f29a720cd14190dff10530 WHIRLPOOL 26af512d7fc0f6ed3f7c1d8bc1d62bdeabd9a7e9975bc4bcafa4082fe3230bab6a03813263e637e35863c8bedcdc9c7b9c20a5a46d8607966df66b6f2edf5567
+EBUILD pychart-1.39-r1.ebuild 840 SHA256 5c309918bf548613a223d04a5a93c2f2dffcad2cfb386093a4c897d84df22073 SHA512 801f81e70ba96421dbadbc56143f0bfdd2953f65f28c31fa92886cd8542ba62f35fbeef5e80c3adf0ce1389c92543378f7393857a09dcd319487a312eb212d66 WHIRLPOOL 05e13670e2fe4a1cfc5e79155a1c82f7460dcb935e1fe9df28135ea4af85dda804ac9346396582f0c1053c4f1d5497c7ca2f8e7f508268cf30a6940f29ba74df
 EBUILD pychart-1.39.ebuild 908 SHA256 7b7664977b0be23134b3e98b76829407fca3c08c258af1a3eecff35548a2c904 SHA512 4d3b1e44adb49dbc19d4b4c67117c2a85675fce09eafc949c17d94d939f03ea41ed41b77cd0b9a9d80bb7538fe0d24359f6a2aad81e41413519e7af4fc2c9a48 WHIRLPOOL 16f154d167d2c2fe741761c45ea9b35c81e97c31b62f4ffbdc79723b761810a1e5b704bedcca5892c597720e93d57bc0e3db0077e96eb30b4d795fb36890503c
-MISC ChangeLog 2119 SHA256 ce866474ef8c96cd2eb17295c2f820238f745bb61aeca3e334d93a1db2ba2a5a SHA512 79f6757be244acc6c0e90c7ea80688c49e3648c13682d6aa674ae9c8843eb44c8354d1c7befe3972abea301a3423578785ad5cdf15d20a315673f5120acae715 WHIRLPOOL 03de5ee3a5c6856681447648fc9b27ec72672500503905f0448165afe09858ed0f04733c31948ed67fc8baf8a5f9f9a3dc91244600c4675541f7b94fe69a5a12
+MISC ChangeLog 2311 SHA256 94681ab509706fdd5a89524ef61eca41a284d63f1e2fb590ffe7463861c11927 SHA512 0a598733371fb2a8945741163979a01d8e28a8e7d475353f343193307b81ca3b19011f8e846a33debb1b136d5b76a2378c28985aa8df5847211a3ed55e6784c9 WHIRLPOOL 8aaee964258b0cb72827027faf11e66bd8b831f699108b9ba2e561daaed0859cdd9cff9aae44780e503ae9fe44a0e7143f175d50f709bfc6cf99272b70b4f39e
 MISC metadata.xml 159 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4 SHA512 d5a29b9f6ecddfc368dc0f1f8919cd3c3d6ecf2c7a82bc8d4c0dd51b7aa15561ed0462acb8ae39bc84f97e706e82d9b4b06357494f164f1648219f604b473fbe WHIRLPOOL 36e19b63a1b307cc200e1d73499b7477f73799db3909e71b5a0916084728351c76d400f65e2c8b3f8fffb2c9ba54c0bd235f785b47414178d98f11d64a9420d7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQJ8BAEBCABmBQJSVtoBXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO7tIQAMebbxuKrCKc4VX7aLpw1SAZ
+8pBtPfe+cyEyScEzVBUj0o1xvBcDx7WCG0pL2Dz70yNt4/UijJ6O3JX7qluFV6jl
+w7zodOodnrPF+IQ4TbvHMZahua1A5Syw9P1oxt9vrKkAAi005EeMlcT5cSYK66yM
+h5TXnQFUnGKd6RV72hpgL2BtLUl+7VOzGVB/LVkXDrW/g476taYvTB3y1mSR2MuN
+KH/cMO43NSZNxPuMBaCI3LTZufOMdpoCc2q12ad8sl2pCSvPWaNRnS2B3ahv4oBl
+pHrkJ1VOGKHysyZhKNPl/0CUeyeFnzPlQsA6Q0ySGA99fH5tWksk42xwcJx0LYMt
+JBadEZFg38C0SNvjJ8Skg5KqhxbO24yOHXltPo2xQb0KznI7wt4mzEt/VsTO9q11
+6C5Dq+O6vMwewGVAcNwXl1SRWCtUnibvQ2pm7OMpOgoFJqQr8hQqNbBhSLwhsAaU
+W7wH1rztMJyC2npRT++LiqrVHaPxLpCsOa8gAymNHME8cZmcmI6NqC9zfP03wlnY
+BF7ABAsoEcSDu/BAaPliHIGeRXpDVTSK/XTM05/dK71sRShjCH2VoCTLqYLiDuLn
+UGLPCLhBk1dldtlVNB7n8v1jhCbT1BdsyK2KKC62B5y1MfoO08jyLGo0mySznARm
+qSnyK7RrcDSCVEmzVBHz
+=wh99
+-----END PGP SIGNATURE-----
