@@ -2,13 +2,26 @@
 Hash: SHA256
 
 DIST PyWebDAV-0.9.8.tar.gz 52605 SHA256 510edb31ff8d4ad5a758c94eee4f12e6178ccb69fe70842d8db52098cedb20ec SHA512 a920e63f1241e41acd7cf02f342fc81e321c50866b103690eee3352de3b0d51c0c9473079bb639d65402719158c6c8113b2c1b7e0bfdc0b863ceb290bcde0145 WHIRLPOOL bde4fef6a8dc909e2278eb2b4b7a5077984dcdbb1f55d3354432985cb16a99795b988b384a826a7dd945e12a2b818b647a493e57d440d37ce8906506aff78e9c
+EBUILD pywebdav-0.9.8-r1.ebuild 793 SHA256 58c9909d270f4b366d35fa6d94360580e699e695d43be111c5380155700a597b SHA512 5596200e429b80b6a9d47949fb8c196c0256da4f4049f7553e894e3050ca86491660a44be692a2ebf416e92709564eef9eb02ebeabb6dd3fb6b77bc9d8aa9418 WHIRLPOOL df37cc316552696707373d15211c9c4a47b1c0b9a69743542d43a6c72c300a1c64da1891e5cfa1227da73b6730cf027486f92725fbadea709b3eae1ee98dfbdc
 EBUILD pywebdav-0.9.8.ebuild 777 SHA256 35071b781288b5a2dd1ebf2ccf4afdf14e64892cd134db76741f35815c1b4d20 SHA512 93a3a49cb77694dcafd65480049fceb4181785f2bf47eed32827591ecf6ff5cd37874ff22ee7efa539f23d96b2fc3dd0ebbb97d031203eb497eec15d7d30232a WHIRLPOOL cb0fc2d90aacc995161533754a4b37c16a21f7f56ca46a506489f9401bf82856dba134562620c164cebaabfb4799510259707933470fbf8ebcaa46da7eccbb5b
-MISC ChangeLog 2590 SHA256 d12d4e63838da67a30e98c1a6f94e48d8bea7f72b48ea984ea60541c1bb3d977 SHA512 a6a7cf317d5c5c8dc894bf88d5f3042a384c0be5c4b14b124a2e51bdaf36c42e12e0d3f8e576665c30fa63308b5f54beb5e05776350cc2f9fc2850c7c298ee16 WHIRLPOOL cb2b73b8199d4748258d56f245c69125149e6bfd9fff4477b36f49d52e80836b448446484008843e076467197b1f51fa857f47bb7ddcf6ba5086f690bcb6f015
+MISC ChangeLog 2790 SHA256 e18408a714bb78e6467a5f067527a7571c4f38c8e2803ac708793a7071c12b7b SHA512 666ef222612db495c403c0cd191385faaa6e8c610101c833211e82dbaa4e3268c1ecb115b22c4029a8b7228dadc4ce4e06e626980b7c160742e646067467c018 WHIRLPOOL 2d899dd23c41cafb12f9445b9f2a6c7adb2bdec174114227296e6d0acdb2a47bfa159e5ef5905f9ce0c4d6c42ddd59d2dcebc4bbd3ab4656e7c3316832f9910b
 MISC metadata.xml 468 SHA256 03c7eef6f4859cda54cc7c77273d726abc58a8efea1c7f4095b8e9f7d7a4faf1 SHA512 ea263b409c1bb4718cbea2b719877e25fc0bf7d1af306114c82419b8d8ded11b1dd0688227d92b5834590235415a8177aae45f5cbcf29d50586634cca1cd3923 WHIRLPOOL d221118372b97d9d063b117ddb1c0b11118b4c04e14052cb98590ee9beaf818f304ba55a18f8c01ba960fd7f80a6ef12baf7650bd5c7070863dc65a8670e91a4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlG9kQkACgkQCaWpQKGI+9Tc2QCghxE7I3KGOK2fUlEr094I6jNp
-IyoAn09Ixe/Kj8lLNCmkymP95rhufcc4
-=85ZL
+iQJ8BAEBCABmBQJSVtZ0XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOZJ8P/1M3kFKvYPyqjJiNCSAX68ps
+ft1gsXFjAAB0BunF//fW0KHa/DG+tgA035p2ir2bss1fpMboEK+g95I6LdQM3FRU
+pNTT/kk0XLhqE9rJFIvvD5OkFwbHcPKIB5v94cwLZewR5yE6+1vhaQ3QeEgW7xpm
+gB2ZCV9c4NMWEf5F1ommXsYqdHr6YqeX6Ekzs1falZYGOrAYfDwPfySMkdkniI18
+DZULAyFfRMgbJcV+AhJH3CsfOzNpyXw0BsP00K8cIys0AWixp0puzncBlmdWpxSK
+9KWt6u95VhnpJ8eKRme9CsKrivfQm0JjsVmS/Bg1Sf+ijs8VEEgHEkhCZs0iVd0i
+Dy/fpxhuzvg4toLAA8FTAN0JtFj9QDCmHM1GpsTAB34ssdvErdE2u6v/Z1QcBV2N
+kTNJd4UxB766wndsMGu5i2zhwYx7IViyj1wyuzBzNGLg+3691nlVnByUn2mYmnEe
+V4Hz49mJFHa004qlJJcTE9RfJP41BzsDQkkdYmEAWleocLIXSvnr7SjIy8p/kagB
+gA3E8IR0ZXrFFR2BUFuP5TITL2mn/1IWIEjniVPkF3uViFcw1/qEHM6JCo9G138A
+gbevaTlOJotFrb5ZdP4OWcA0oBvG9wQ5VzJzKJC7FPC36A1MFRzXjKjXprvxCI9n
+vCNThsWRf3+lFbgFO75L
+=OBTg
 -----END PGP SIGNATURE-----
